<resources>
    <string name="app_name">Market Place</string>
    <string name="title_login">LOGIN</string>
    <string name="title_register">REGISTER</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_forgot_password">Enter your e-mail address and we will send you an e-mail to reset your
        password!
    </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="button_login">Sign In</string>
    <string name="button_register">Sign Up</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="account">Already have an account?</string>
    <string name="register">REGISTER NOW!</string>
    <string name="login">LOGIN NOW!</string>
    <string name="username_empty">Please enter your username!</string>
    <string name="email_empty">Please enter your email ID!</string>
    <string name="email_wrong">Incorrect email ID!</string>
    <string name="email_sent_success">Email was sent successfully!</string>
    <string name="password_empty">Please enter your password!</string>
    <string name="password_wrong">Incorrect password!</string>
    <string name="confirm_password_empty">Please enter your confirm password!</string>
    <string name="confirm_password_mismatch">Password and confirm password does not match!</string>

    <string name="please_wait">Please Wait</string>
    <string name="register_success">You are registered successfully!</string>

    <string name="title_profile">PROFILE</string>
    <string name="et_hint_mobile_number">MOBILE NUMBER</string>
    <string name="btn_save">SAVE</string>
    <string name="hintbtnSave">SAVE</string>
    <string name="read_storage_permission_denied">Permission is denied!</string>
    <string name="image_selection_failed">Image Selection Failed!</string>
    <string name="mobile_number_empty">Please enter your mobile number!</string>
    <string name="profile_updated_success">Your profile was updated successfully!</string>
    <string name="image_uploaded_success">Your image was uploaded successfully!</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_market">My Market</string>
    <string name="title_fares">My Fares</string>
    <string name="click_back_again">Please click back again to exit!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
</resources>