<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_timeline">

    <fragment
            android:id="@+id/navigation_timeline"
            android:name="com.example.marketplace.fragments_viewModels.fragments.TimelineFragment"
            android:label="@string/title_timeline"
            tools:layout="@layout/fragment_timeline"/>

    <fragment
            android:id="@+id/navigation_market"
            android:name="com.example.marketplace.fragments_viewModels.fragments.MarketFragment"
            android:label="@string/title_market"
            tools:layout="@layout/fragment_market"/>

    <fragment
            android:id="@+id/navigation_fares"
            android:name="com.example.marketplace.fragments_viewModels.fragments.FaresFragment"
            android:label="@string/title_fares"
            tools:layout="@layout/fragment_fares"/>
</navigation>