<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/toolbar_register_activity"
        tools:context=".activities.RegisterActivity">
<!--    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"-->
<!--                                       android:layout_height="wrap_content"-->
<!--                                        android:id="@+id/toolbar_register_activity"-->
<!--                                       app:layout_constraintEnd_toEndOf="parent"-->
<!--                                       app:layout_constraintStart_toStartOf="parent"-->
<!--                                       app:layout_constraintTop_toTopOf="parent"-->
<!--    >-->

<!--    </androidx.appcompat.widget.Toolbar>-->





    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:id="@+id/header_height"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
    >
        <!--    <ImageView android:layout_width="match_parent" android:layout_height="89dp"-->
        <!--               android:src="@drawable/img_splash"-->
        <!--               android:scaleType="fitXY"-->
        <!--    >-->

        <!--    </ImageView>-->

    </FrameLayout>


    <com.example.marketplace.utils.MarketPlaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/title_register"
            android:textColor="@color/purple_700"
            android:layout_marginTop="28dp"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_height"


            tools:ignore="MissingConstraints" app:layout_constraintHorizontal_bias="0.497">

    </com.example.marketplace.utils.MarketPlaceTextView>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_username"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/tv_text_size"
            android:layout_marginTop="5dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintHorizontal_bias="0.049">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_username"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" app:layout_constraintHorizontal_bias="0.0">

        <EditText
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/et_username"
                android:inputType="text"
                android:padding="@dimen/et_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/et_text_size"
                tools:text="123456abc"
                tools:ignore="MissingConstraints">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/hint_email"
              android:textSize="@dimen/tv_text_size"
              android:textColor="@color/purple_500"
              android:id="@+id/tv_password"
              android:layout_marginTop="5dp"

              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/ti_username"
              tools:ignore="InvalidId,MissingConstraints" app:layout_constraintHorizontal_bias="0.047">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/ti_email" tools:ignore="MissingConstraints"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_username">

        <EditText
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:id="@+id/et_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/et_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/et_text_size"
                tools:text="asd@yahoo.com"
                tools:ignore="MissingConstraints">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>




    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/tv_text_size"
            android:layout_marginTop="5dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_email"
            app:layout_constraintHorizontal_bias="0.049">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_password"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_email" app:layout_constraintHorizontal_bias="0.0">

        <EditText
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                android:padding="@dimen/et_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/et_text_size"
                tools:text="123456abc"
                tools:ignore="MissingConstraints">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_confirm_password"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/tv_text_size"
            android:layout_marginTop="5dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_password"
            app:layout_constraintHorizontal_bias="0.049">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ti_confirm_password"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_password" app:layout_constraintHorizontal_bias="0.0">

        <EditText
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/et_confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/et_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/et_text_size"
                tools:text="123456abc"
                tools:ignore="MissingConstraints">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.marketplace.utils.MarketPlaceButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:gravity="center"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="@dimen/button_padding"
            android:text="@string/button_register"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_confirm_password"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="28dp">

    </com.example.marketplace.utils.MarketPlaceButton>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="0.496">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_account"

            android:padding="@dimen/clickable_tv_padding"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_no_account"
            tools:layout_editor_absoluteY="494dp" tools:layout_editor_absoluteX="69dp">

    </TextView>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_now"

            android:padding="@dimen/clickable_tv_padding"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/tv_login_now"
            tools:layout_editor_absoluteY="494dp" tools:layout_editor_absoluteX="251dp">

    </TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>