<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".activities.SettingsActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <FrameLayout
                android:id="@+id/fl_header_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_image_height">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_header_bg"
                    android:background="#F1F1F1"
                    android:scaleType="fitXY">

            </ImageView>

            <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:id="@+id/toolbar_settings_activity">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tv_title"
                        android:gravity="center"
                        android:paddingStart="@dimen/et_padding"
                        android:paddingEnd="0dp"
                        android:text="@string/title_settings"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold">

                </TextView>
            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>

        <FrameLayout
                android:layout_width="@dimen/settings_user_image_size"
                android:layout_height="@dimen/settings_user_image_size"
                android:id="@+id/fl_user_image"
                android:layout_below="@id/fl_header_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_user_image_marginTop">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/iv_user_photo"
                    android:layout_margin="@dimen/profile_image_margin"
                    android:background="#F1F1F1"
                    android:scaleType="fitXY"
                    android:src="@drawable/user_placeholder"></ImageView>

            <View android:layout_width="match_parent" android:layout_height="match_parent"
                  android:background="@drawable/user_image_background"></View>
        </FrameLayout>



    <com.example.marketplace.utils.MarketPlaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_edit"
            android:layout_margin="16dp"
            android:background="@drawable/item_grey_border_background"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
            android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
            android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
            android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
            android:text="@string/lbl_edit"
            android:textColor="@color/purple_200"
            android:textSize="@dimen/settings_edit_label_textSize"></com.example.marketplace.utils.MarketPlaceTextView>

        <com.example.marketplace.utils.MarketPlaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_name"
                android:layout_below="@+id/fl_user_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_name_marginTop"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/settings_name_textSize"
                ></com.example.marketplace.utils.MarketPlaceTextView>

        <com.example.marketplace.utils.MarketPlaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email"
                android:layout_below="@+id/tv_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_info_marginTop"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/settings_info_textSize"
                ></com.example.marketplace.utils.MarketPlaceTextView>

        <com.example.marketplace.utils.MarketPlaceTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_mobile_number"
                android:layout_below="@+id/tv_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/settings_info_marginTop"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/settings_info_textSize"
                ></com.example.marketplace.utils.MarketPlaceTextView>

        <com.example.marketplace.utils.MarketPlaceButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_logout"
                android:layout_below="@+id/tv_mobile_number"
                android:gravity="center"
                android:layout_marginStart="@dimen/settings_button_marginStartEnd"
                android:layout_marginTop="@dimen/settings_button_marginTopBottom"
                android:layout_marginEnd="@dimen/settings_button_marginStartEnd"
                android:layout_marginBottom="@dimen/settings_button_marginTopBottom"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:text="@string/btn_lbl_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"></com.example.marketplace.utils.MarketPlaceButton>
    </RelativeLayout>

</ScrollView>